--- a/Soccer_Manager/Views/_ViewImports.cshtml
+++ b/Soccer_Manager/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 @using Soccer_Manager
-@using Soccer_Manager.Models
+@using Soccer_Manager.ModelClasses;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
