--- a/Soccer_Manager/Views/Home/SoccerManager.cshtml
+++ b/Soccer_Manager/Views/Home/SoccerManager.cshtml
@@ -1,7 +1,45 @@
-﻿<div class="card card-outline-primary m-1 p-1">
-   <div class="bg-faded p-1">
+﻿@model Soccer_Manager.ModelClasses.Team
+
+@{
+    ViewData["Title"] = "SoccerManager";
+}
+
+<h2>SoccerManager</h2>
+
+<div class="card card-outline-primary m-1 p-1">
+    <div class="bg-faded p-1">
         <h4>
+
+
             Some information about site
         </h4>
     </div>
 </div>
+
+<h4>Team</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="SoccerManager">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="TeamId" class="control-label"></label>
+                <input asp-for="TeamId" class="form-control" />
+                <span asp-validation-for="TeamId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+        </form>
+    </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
