--- a/WebApplication1/Views/Organizer/Create.cshtml
+++ b/WebApplication1/Views/Organizer/Create.cshtml
@@ -36,7 +36,12 @@
                     <input asp-for="MaxCountTeams" class="form-control" />
                     <span asp-validation-for="MaxCountTeams" class="text-danger"></span>
                 </div>
-
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input type="password" asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                s
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
