--- a/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿
-@Layout = null
 
-<a class="btn btn-block btn-secondary"
+
+<a class="btn btn-success"
    asp-action="Index"
    asp-controller="Home"
    asp-route-category="">
