improve temp authentication

--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,8 +1,10 @@
 ﻿<html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css"/>
+    <link rel="stylesheet" asp-href-include="/lib/bootstrap/dist/**/*.min.css" />
     <link rel="stylesheet" asp-href-include="/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <title>SoccerManager</title>
 
 </head>
