--- a/WebApplication1/Views/Organizer/Create.cshtml
+++ b/WebApplication1/Views/Organizer/Create.cshtml
@@ -12,7 +12,7 @@
     <h4>Tournament</h4>
     <hr />
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="margin-left: 5em;">
             <form asp-action="Create">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -22,13 +22,18 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
+                    <label asp-for="Mail" class="control-label"></label>
+                    <input type="email" asp-for="Mail" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <label asp-for="StartDate" class="control-label"></label>
-                    <input asp-for="StartDate" class="form-control" />
+                    <input type="date" asp-for="StartDate" class="form-control" />
                     <span asp-validation-for="StartDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="EndDate" class="control-label"></label>
-                    <input asp-for="EndDate" class="form-control" />
+                    <input type="date" asp-for="EndDate" class="form-control" />
                     <span asp-validation-for="EndDate" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -41,7 +46,7 @@
                     <input type="password" asp-for="Password" class="form-control" />
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-                s
+
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
                 </div>
