--- a/WebApplication1/Views/Organizer/Index.cshtml
+++ b/WebApplication1/Views/Organizer/Index.cshtml
@@ -1,12 +1,80 @@
-﻿@model IEnumerable<Tournament>
+﻿@model Tournament
 
 @{
     ViewData["Title"] = "Index";
 }
 
 <div class="container">
-    <h2>Index</h2>
 
-   
+    @if (@Model != null)
+    {
+
+        <div class="infoBlock" style="width: 100%;">
+            <header>
+                <h2 style="display: inline;">Your cup: @Model?.Name</h2>
+
+                <div class="buttonBlock">
+                    <button style="background-color: steelblue; position: inherit;" class="btn btn-success glyphicon glyphicon-wrench"></button>
+                    <button style="background-color: steelblue;" class="btn btn-success glyphicon glyphicon-trash"></button>
+                </div>
+            </header>
+
+            <ul style="list-style: none; font-size: 2em;">
+                <li>Mail: @Model?.Mail</li>
+                <li>Max count of teams: @Model?.MaxCountTeams</li>
+                <li>Start date: @Model?.StartDate</li>
+                <li>End date: @Model?.EndDate</li>
+            </ul>
+        </div>
+
+        <div class="infoBlock" style="width: 40%">
+
+            <header>
+                Current registered team
+            </header>
+
+            <table class="table table-striped" style="margin-bottom: 0px; width: 95%; margin-left: 2.5%;">
+                <thead style="font: bold 1.2em arial, verdana">
+                    <tr>
+                        <td>№</td>
+                        <td>Name</td>
+                        <td>Mail</td>
+                    </tr>
+                </thead>
+                @{int i = 1;}
+                @foreach (Team item in Model.TeamTournaments.Select(sc => sc.Team).ToList())
+                {
+                    <tr>
+                        <td>
+                            @i
+                        </td>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @item.Mail
+                        </td>
+                    </tr>
+                    i++;
+                }
+            </table>
+        </div>
+    }
+    else
+    {
+        <div class="infoBlock" style="width: 30%; margin-left: 35%;">
+            <header>At first you must: </header>
+
+            <div style="text-align:center">
+                <br />
+                <a class="btn btn-success" asp-action="Login" asp-controller="Organizer">Log In</a>
+                <br /><span>Or</span><br />
+                <a class="btn btn-success" asp-action="Create" asp-controller="Organizer">Create New</a>
+                <br />
+            </div>
+        </div>
+
+    }
+
 
 </div>
