Improve navigation menu

--- a/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -1,10 +1,9 @@
 ﻿
 
-
-<a class="btn btn-success"
-   asp-action="Index"
-   asp-controller="Home"
-   asp-route-category="">
-    Home
-</a>
+<ul>
+    <li><a asp-action="Index" asp-controller="Home" asp-route-category=""> Home </a></li>
+    <li><a href="news.asp">News</a></li>
+    <li><a href="contact.asp">Contact</a></li>
+    <li><a href="about.asp">About</a></li>
+</ul>
 
