--- a/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/WebApplication1/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -2,8 +2,9 @@
 
 <ul>
     <li><a asp-action="Index" asp-controller="Home" asp-route-category=""> Home </a></li>
-    <li><a href="news.asp">News</a></li>
-    <li><a href="contact.asp">Contact</a></li>
-    <li><a href="about.asp">About</a></li>
+    <li><a asp-action="Index" asp-controller="Organizer" asp-route-category="">Organizer</a></li>
+    <li><a asp-action="Index" asp-controller="Team" asp-route-category="">Team</a></li>
+    <li><a asp-action="Contact" asp-controller="Home" asp-route-category="">Contact</a></li>
+    <li><a asp-action="About" asp-controller="Home" asp-route-category="">About</a></li>
 </ul>
 
