--- a/WebApplication1/Views/Organizer/Create.cshtml
+++ b/WebApplication1/Views/Organizer/Create.cshtml
@@ -49,14 +49,11 @@
 
                 <div class="form-group">
                     <input type="submit" value="Create" class="btn btn-default" />
+                    <a class="btn btn-default" asp-action="Index">Cancel</a>
                 </div>
             </form>
 
         </div>
-    </div>
-
-    <div>
-        <a asp-action="Index">Back to List</a>
     </div>
 
 
