--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -21,6 +21,9 @@ header {
     color: white;
 }
 
+nav {
+    margin-right: 2em;
+}
 nav ul {
     position: absolute;
     height: 100%;
@@ -58,7 +61,7 @@ table {
 }
 
 th, td {
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
 
@@ -77,6 +80,10 @@ tr:nth-child(even) {
 
 button {
     background-color: steelblue;
+}
+
+a.glyphicon {
+    position: inherit;
 }
 
 .buttonBlock {
