--- a/WebApplication1/Views/Organizer/Login.cshtml
+++ b/WebApplication1/Views/Organizer/Login.cshtml
@@ -7,7 +7,7 @@
     <header>Login</header>
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4" style="    width: 90%; margin-left: 5%; margin-top: 2em;">
             <form asp-action="Login">
 
                 <div class="form-group">
@@ -23,7 +23,9 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Submit" class="btn btn-default" />
+                    <input type="reset" value="Reset" class="btn btn-default" />
+                    <a asp-action="Index" class="btn btn-default">Cancel</a>
                 </div>
             </form>
         </div>
