--- a/WebApplication1/wwwroot/css/styles.css
+++ b/WebApplication1/wwwroot/css/styles.css
@@ -92,3 +92,29 @@ a.glyphicon {
     float: right;
     margin-right: .5em;
 }
+
+.background-field {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(100,100,100, 0.5);
+    margin-left: -12%;
+    margin-top: -5em;
+}
+
+.middleWindow {
+    padding-top: 3em;
+    position: fixed;
+    width: 50%;
+    border: .2em solid #333;
+    padding: 1.5em;
+    background-color: white;
+    width: 30%;
+    margin-top: 10em;
+    margin-left: 20%;
+    border-radius: 2em;
+}
+
+    .middleWindow div {
+        width: 100px;
+    }
