--- a/WebApplication1/Views/Team/Index.cshtml
+++ b/WebApplication1/Views/Team/Index.cshtml
@@ -66,7 +66,7 @@
                     </tr>
                 </thead>
                 @{int i = 1;}
-                @foreach (Player item in Model?.Team.Players.ToList())
+                @foreach (Player item in Model?.Team.Players)
                 {
                     <tr>
                         <td>
