--- a/WebApplication1/Views/Home/Cup.cshtml
+++ b/WebApplication1/Views/Home/Cup.cshtml
@@ -51,7 +51,6 @@
 
     </div>
     <div>
-        @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-        <a asp-action="Index">Back to List</a>
+        <a class="btn btn-default" asp-action="Index">Back to List</a>
     </div>
 </div>
