--- a/WebApplication1/Views/Organizer/Index.cshtml
+++ b/WebApplication1/Views/Organizer/Index.cshtml
@@ -26,7 +26,7 @@
     {
 
         <div style="text-align: right; padding: 2em; background-color: white;">
-            <a asp-action="LogOut" asp-controller="Organizer">Log Out</a>
+            <a class="btn btn-default" asp-action="LogOut" asp-controller="Organizer">Log Out</a>
         </div>
 
         <div class="infoBlock" style="width: 100%;">
