--- a/WebApplication1/Views/Organizer/Edit.cshtml
+++ b/WebApplication1/Views/Organizer/Edit.cshtml
@@ -8,8 +8,7 @@
 
 <h4>Tournament</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div style="width: 50%; margin: 0 auto;">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -45,7 +44,6 @@
                 <a class="btn btn-default" asp-action="Index">Cancel</a>
             </div>
         </form>
-    </div>
 </div>
 
 
