--- a/WebApplication1/Views/Team/AddPlayer.cshtml
+++ b/WebApplication1/Views/Team/AddPlayer.cshtml
@@ -18,23 +18,23 @@
 
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
+                    <div><span asp-validation-for="Name" class="text-danger"></span></div>
                     <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Surname" class="control-label"></label>
+                    <div><span asp-validation-for="Surname" class="text-danger"></span></div>
                     <input asp-for="Surname" class="form-control" />
-                    <span asp-validation-for="Surname" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Position" class="control-label"></label>
+                    <div><span asp-validation-for="Position" class="text-danger"></span></div>
                     <input asp-for="Position" class="form-control" />
-                    <span asp-validation-for="Position" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Age" class="control-label"></label>
+                    <div><span asp-validation-for="Age" class="text-danger"></span></div>
                     <input asp-for="Age" class="form-control" />
-                    <span asp-validation-for="Age" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
