--- a/WebApplication1/Views/Team/EditPlayer.cshtml
+++ b/WebApplication1/Views/Team/EditPlayer.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Edit</h2>
 
-<h4>Team</h4>
+<h4>Player</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,23 +17,23 @@
 
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
+                <div><span asp-validation-for="Name" class="text-danger"></span></div>
                 <input asp-for="Name" class="form-control" value="@Model.Name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Surname" class="control-label"></label>
-                <input asp-for="Surname" class="form-control" value="@Model.Surname"/>
-                <span asp-validation-for="Surname" class="text-danger"></span>
+                <div><span asp-validation-for="Surname" class="text-danger"></span></div>
+                <input asp-for="Surname" class="form-control" value="@Model.Surname" />
             </div>
             <div class="form-group">
                 <label asp-for="Position" class="control-label"></label>
-                <input asp-for="Position" class="form-control" value="@Model.Position"/>
-                <span asp-validation-for="Position" class="text-danger"></span>
+                <div><span asp-validation-for="Position" class="text-danger"></span></div>
+                <input asp-for="Position" class="form-control" value="@Model.Position" />
             </div>
             <div class="form-group">
                 <label asp-for="Age" class="control-label"></label>
-                <input asp-for="Age" class="form-control" value="@Model.Age"/>
-                <span asp-validation-for="Age" class="text-danger"></span>
+                <div><span asp-validation-for="Age" class="text-danger"></span></div>
+                <input asp-for="Age" class="form-control" value="@Model.Age" />
             </div>
 
             <div class="form-group">
