--- a/WebApplication1/Views/Team/Login.cshtml
+++ b/WebApplication1/Views/Team/Login.cshtml
@@ -12,14 +12,14 @@
 
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
+                    <div><span asp-validation-for="Name" class="text-danger"></span></div>
                     <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Password" class="control-label"></label>
+                    <div><span asp-validation-for="Password" class="text-danger"></span></div>
                     <input type="password" asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
